debian-installer (2005xxxx) UNRELEASED; urgency=low

  * Frans Pop
    - Add build dependencies needed for PDF and TXT builds of the manual
    - Make main build script for the manual fail on errors
  * Joey Hess
    - Copyright file updates for 2005.
    - Switch amd64 back to 2.6.8 kernel; 2.6.10 is not preferred. Closes: #307306
  * kurt Roeckx
    - Rename libdevmapper1.00-udeb to libdevmapper1.01-udeb for monolithic
      image.  It's only build for amd64.  (Closes: #306976)
    - Change amd64 kernel from 2.6.8-10 to 2.6.8-11.

 -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:46:58 +0100

debian-installer (20050317) unstable; urgency=low

  * Frans Pop
    - Add German and Russian for official builds of the manual
    - Add PDF and TXT formats for official builds of the manual
  * Martin Michlmayr
    - Mention rootdev in the ARM manual, thanks Kyle McMartin.
    - Use the correct TFTP filename for ARM Netwinder.
    - Remove bogus information about noinitrd option from ARM manual.
    - Mention option needed for serial console installations on
      ARM Netwinder, thanks thanks Kyle McMartin.

 -- Joey Hess <joeyh@debian.org>  Thu, 17 Mar 2005 10:54:07 -0500

debian-installer (20050305) unstable; urgency=high

  * Thiemo Seufer
    - Do an e2fsck for the extra floppy images.
    - Handle sparse files in cramfs images more efficiently.
    - Use cramfs images for mips/r4k-ip22 and mips/r5k-ip22.
    - Add cramfsprogs build-dep for mips.
  * Colin Watson
    - Add acpi-modules to the amd64 cdrom, hd-media, monolithic, and netboot
      initrds, so that rootskel can turn the fan on.
    - Use dependency resolution for ide-modules, nic-modules,
      pcmcia-storage-modules, scsi-common-modules, scsi-modules, and
      usb-storage-modules on powerpc, and remove several modules from
      powerpc-extra-modules that only belong on certain images. This removes
      cdrom-core-modules and fs-common-modules from netboot images, and adds