@@ -43,7 +43,7 @@ for lang in $languages; do
         mkdir -p "$destination/$destsuffix"
         for format in $formats; do
             if [ "$format" = html ]; then
-                mv ./build.out/html/*.html "$destination/$destsuffix"
+                mv ./build.out/html/* "$destination/$destsuffix"
             else
                 # Do not fail because of missing PDF support for some languages
                 mv ./build.out/install.$lang.$format "$destination/$destsuffix" || true
