@@ -1,0 +1,6 @@
+/* Cascading stylesheet for the Debian Installer Installation Guide */
+
+/* Use grey background for examples */
+pre.screen {
+  background-color : #E0E0E0;
+}
