@@ -3,6 +3,7 @@ debian-installer (2005xxxx) UNRELEASED; urgency=low
   * Frans Pop
     - Add build dependencies needed for PDF and TXT builds of the manual
     - Make main build script for the manual fail on errors
+    - Introduce cascading stylesheet for the HTML version of the manual.
   * Joey Hess
     - Copyright file updates for 2005.
     - Switch amd64 back to 2.6.8 kernel; 2.6.10 is not preferred. Closes: #307306
@@ -11,7 +12,7 @@ debian-installer (2005xxxx) UNRELEASED; urgency=low
       image.  It's only build for amd64.  (Closes: #306976)
     - Change amd64 kernel from 2.6.8-10 to 2.6.8-11.
 
- -- Frans Pop <aragorn@tiscali.nl>  Thu, 24 Mar 2005 01:46:58 +0100
+ -- Frans Pop <aragorn@tiscali.nl>  Sun, 22 May 2005 16:01:13 +0200
 
 debian-installer (20050317) unstable; urgency=low
 
